--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,11 @@ body {
     font-family: "Roboto", sans-serif;
 }
 
+.container {
+    max-width: 1280px;
+    margin: auto;
+}
+
 .header {
     background-color: #635854;
     padding-top: 12px;
@@ -14,8 +19,6 @@ body {
 }
 
 .navbar {
-    max-width: 1280px;
-    margin: auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -58,3 +61,222 @@ ul.navbar-menu {
     text-decoration: none;
     color: #fff;
 }
+
+.main-block {
+    padding-top: 54px;
+    padding-bottom: 100px;
+    display: flex;
+}
+
+.main-info {
+    flex-grow: 1;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.home-image path {
+    opacity: 0;
+    cursor: pointer;
+}
+
+.home-image path:hover {
+    opacity: 1;
+}
+
+.counter-group {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.counter-button {
+    border: none;
+    background-color: #fff;
+    cursor: pointer;
+}
+
+.counter-arrow-down {
+    transform: rotateX(180deg);
+}
+
+.main-info__title {
+    font-size: 37px;
+    line-height: 37px;
+    font-weight: normal;
+    color: #635854;
+    margin-top: 0;
+}
+
+.counter {
+    color: #635854;
+    font-size: 124px;
+    margin-top: 10px;
+}
+
+.button-primary {
+    background-color: #3596f5;
+    border-radius: 6px;
+    color: #fff;
+    border: none;
+    padding: 16px 36px;
+    cursor: pointer;
+}
+
+path.current-floor {
+    opacity: 1;
+}
+
+.footer {
+    background-color: #d7d7d7;
+    border-top: 4px solid #3596f5;
+}
+
+.footer-block {
+    padding-top: 50px;
+    padding-bottom: 59px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.footer-action-block {
+    display: flex;
+    align-items: center;
+}
+
+.footer-contacts__phone {
+    display: block;
+    font-weight: 700;
+    font-size: 17px;
+    line-height: 20px;
+    text-decoration: none;
+    color: #635854;
+}
+
+.footer-messengers-menu {
+    list-style: none;
+    display: flex;    
+}
+
+.footer-notifications-list {
+    list-style: none;
+    display: flex;
+}
+
+.footer-notifications-list__li {
+    margin-right: 20px;
+}
+
+.footer-notifications-list__li:last-child {
+    margin-right: 0;
+}
+
+.footer-messengers-menu__item {
+    margin-right: 15px;
+}
+
+.footer-messengers-menu__item:last-child {
+    margin-right: 0;
+}
+
+.footer-notifications-list__li>a{
+    color: #635854;
+}
+
+.modal {
+    position: fixed; /* Поверх сайта*/
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0;
+    transform: scale(0);
+    transition: opasity 0.2s;
+  }
+  
+  .is-open {
+    opacity: 1;
+    transform: scale(1);
+  }
+  
+  .modal-dialog {
+    position: relative;
+    max-width: 1000px;
+    min-height: 565px;
+    background-color: #fff;
+    flex-grow: 1;
+    display: flex;
+  }
+  
+  .modal-image {
+    background-color: #ebebeb;
+    width: 60%;
+    text-align: center;
+    padding: 50px;
+  }
+  
+  .modal-title {
+    font-family: "Roboto", sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 24px;
+    line-height: 29px;
+    text-transform: uppercase;
+    margin-top: 0;
+    margin-bottom: 25px;
+  }
+  
+  .modal-info {
+    width: 40%;
+    padding: 50px 46px;
+  }
+  
+  .flat-list {
+    padding: 0;
+    list-style: none;
+    margin-top: 55px;
+  }
+  
+  .flat-link {
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 19px;
+    color: #635854;
+    text-decoration: none;
+  }
+  
+  .flat-link:hover {
+    color: #3596f5;
+    text-decoration: underline;
+  }
+  .flat-item {
+    margin-bottom: 10px;
+  }
+  
+  .modal-alert {
+    font-family: Roboto;
+    font-style: italic;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 19px;
+    color: #635854;
+    margin-top: 56px;
+  }
+  
+  .modal-close-button {
+    position: absolute;
+    right: 27px;
+    top: 38px;
+    cursor: pointer;
+    border: none;
+    background-color: #fff;
+  }
